# simple-rust-url-shortener

./: Cargo.toml
src/: main.rs  models.rs  state.rs  utils.rs
src/handlers/: get_url.rs  mod.rs  shorten.rs
